fix vertical align for form item in ff, fix design

--- a/app/blocks/add-photo/add-photo.styl
+++ b/app/blocks/add-photo/add-photo.styl
@@ -2,6 +2,7 @@
 	padding 10px
 	display flex
 	flex-wrap wrap
+	width 100%
 	background-color #fff
 	border 1px dashed #ababab
 	
@@ -29,7 +30,7 @@
 		
 		+above(980px)
 			width 12.5%
-			min-width auto
+			min-width 116px
 			height 100px
 
 		&_main
