--- a/app/blocks/alert/alert.styl
+++ b/app/blocks/alert/alert.styl
@@ -1,6 +1,7 @@
 .alert
 	margin-bottom 1.5em
 	padding 15px
+	width 100%
 	display block
 	line-height 1.71429
 	border 1px solid $colorDecorative
@@ -8,3 +9,6 @@
 	
 	&_warning
 		border-color $colorMain
+		
+	&_success
+		border-color $colorAkcent
