--- a/app/blocks/form/form.styl
+++ b/app/blocks/form/form.styl
@@ -76,9 +76,9 @@
 		line-height 1.1
 		color $colorSecondary
 		background-image linear-gradient(to right, $colorDecorative 75%, transparent 75%)
-		background-position 0 1.04em
+		background-position 0 1.1em
 		background-repeat repeat-x
-		background-size 8px 3px
+		background-size 8px 1px
 		
 		.collapse_open &
 			color $colorText
@@ -175,6 +175,8 @@
 			
 	&__item
 		margin 0 15px 10px
+		display inline-flex
+		flex-wrap wrap 
 		width calc(100% - 30px)
 		
 		+above(768px)
@@ -252,7 +254,9 @@
 	
 	&__remark
 		margin-top 10px
-		display inline-block
+		// display inline-block
+		display block
+		width 100%
 		font-size 11px
 		line-height 1.2
 		color #ababab
