--- a/app/blocks/input/input.styl
+++ b/app/blocks/input/input.styl
@@ -31,3 +31,7 @@
 		
 	&_invalid
 		border-color $colorMain
+		
+	.control-group &_digit-pretify
+		width 50%
+		flex-grow 1
